correction suite au remplacement des Executor par un excutorService (concurency)